fix draw PLines

--- a/CADDB/CADDB.csproj
+++ b/CADDB/CADDB.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="CommonUtil.cs" />
     <Compile Include="DBLoadUtil.cs" />
+    <Compile Include="DBRetrieveUtil.cs" />
     <Compile Include="DBUtil.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
